# Tutorial_2023

./: .gitignore  readme.md
.obsidian/: app.json  workspace.json
Tasks/: readme.md
Tutorial_2023/doc/: readme.md  考核须知.md
doc/: 基于git和GitHub完成考核任务.md  考核须知.md  补充知识五.md  视觉：基于OpenCV完成考核.md
first_Pkg/: CMakeLists.txt
first_Pkg/src/: subscriber.py
tasks/: readme.md
tasks/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
tasks/week1/: readme.md
tasks/week1（基础考核）/: Readme傅小桐.md  readme.md  readme1.md  第一周（基础考核）.md
tasks/week2-4 机械组/: readme.md
tasks/week2-4 视觉组/: readme.md
tasks/week2-4 飞控组/: readme.md
tasks/week3_机械组/: readme.md
tasks/基础知识考察/: fpga.md
workspace/: readme.md  零件11.SLDPRT  零件15.SLDPRT
workspace/Week1/: #Week 1 tasks.ini  CMakeLists.txt  README.md  reverse_linked_list.cpp  script1.sh  script2.sh  stu.sh
workspace/cmaketask/: CMakeLists.txt  ListNode.cpp  ListNode.h  helloword.h  helloworld.cpp  main2.cpp
workspace/readmeweek3/: reedmew3.md
workspace/shelltask/: my.sh  myshell2.sh  myshell3.sh
workspace/src_code/week_4/opencv_project/: CMakeLists.txt  readme.md
workspace/src_code/week_4/opencv_project/lib/x64/mingw/lib/: OpenCVModules-release.cmake
workspace/src_code/week_4/opencv_project/src/: 1.cpp  Recovery.cpp  Recovery.h  main.cpp  test.cpp
workspace/src_code/week_4/opencv_project/src/v1/: Recovery.cpp
workspace/src_code/week_4/opencv_project/src/v2/: Recovery.cpp  Recovery.h
workspace/taskw1/: CMakeLists.txt  msg_pub.cpp  msg_sub.cpp  my_msg.msg  package.xml
workspace/week1/: readme.md  week1.md
(+450 files in other folders)
